# agentic-skills

./: .gitignore  CHANGELOG.md  FOLLOWUP_IMPLEMENTATION_PREP.md  README.md  agentic.example.yaml  pyproject.toml
agentic/: __init__.py  cli.py  config.py  install.py  pipeline.py  validate.py  vcs.py
agentic/forges/: __init__.py  base.py  gitea.py  github.py
agentic/providers/: __init__.py  base.py  claude.py  codex.py
pipelines/: cheap.yaml  default.yaml  production.yaml
scripts/: install_skills  run_pipeline  validate_config
skills/architecture/: SKILL.md  output-schema.yaml
skills/docs/: SKILL.md  output-schema.yaml
skills/fix-review/: SKILL.md  output-schema.yaml
skills/implementation/: SKILL.md  output-schema.yaml
skills/requirements/: SKILL.md  output-schema.yaml
skills/review/: SKILL.md  output-schema.yaml
skills/review-architecture/: SKILL.md
skills/review-architecture-plan/: SKILL.md  output-schema.yaml
skills/review-correctness/: SKILL.md
skills/review-migrations/: SKILL.md
skills/review-performance/: SKILL.md
skills/review-requirements/: SKILL.md
skills/review-security/: SKILL.md
skills/review-tests/: SKILL.md
templates/context/: coding-conventions.md  dangerous-areas.md  dependency-map.md  module-boundaries.md  ownership.md  repo-map.md  test-commands.md
templates/memory/: decisions.md  known-issues.md  lessons-learned.md  preferred-patterns.md  recurring-review-comments.md
tests/: test_config.py  test_forges.py  test_install.py  test_pipeline.py  test_providers.py
