[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-coding-pipeline"
version = "0.2.0"
description = "A provider-agnostic, auditable coding workflow orchestrator"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["PyYAML>=6.0"]

[project.scripts]
run-pipeline = "agentic.cli:main"
validate-agentic-config = "agentic.validate:main"
install-agentic-skills = "agentic.install:main"

[tool.setuptools.packages.find]
include = ["agentic*"]
